k8s/fileservice/file-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-db
spec:
  clusterIP: None
  selector:
    app: file-db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: file-db
spec:
  serviceName: file-db
  replicas: 1
  selector:
    matchLabels:
      app: file-db
  template:
    metadata:
      labels:
        app: file-db
    spec:
      containers:
        - name: file-db
          image: postgres:13.1-alpine@sha256:16af09e480c49226f8e7cd4d602ab27e59f434eb255d2b45bd0cfe1defb86fd7
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: file-db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: file-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
